# aur

./: .gitignore  .gitmodules  Cargo.toml  README.md  bun.lockb  index.ts  makepkg  package.json  tsconfig.json
.github/workflows/: main.yml  release.yml
makepkg_libs/util/: config.sh
src/: bun_bin.rs  main.rs  tests.rs
