[package]
name = "aur"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = 'z'
strip = true
panic = "abort"

[dependencies]
data-encoding = "2.4.0"
eyre = "0.6.8"
git2 = { version = "0.18.0", features = ["vendored-libgit2"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
structstruck = "0.4.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
