[package]
name = "aur"
edition = "2021"
version = "0.1.3"

[dependencies]
data-encoding = "2.4.0"
eyre = "0.6.8"
regex = "1.9.5"
serde_json = "1.0.107"
structstruck = "0.4.1"

[dependencies.compio]
version = "0.9.0"
features = ["macros"]

[dependencies.git2]
version = "0.18.0"
features = ["vendored-libgit2"]

[dependencies.reqwest]
version = "0.12.2"
features = ["json"]

[dependencies.serde]
version = "1.0.188"
features = ["serde_derive", "derive"]
default-features = false

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[profile.release.package]
