[package]
name = "aur"
edition = "2021"
version = "0.1.4"

[dependencies]
#compio = { version = "0.9.0", features = ["macros"] }
data-encoding = "2.4.0"
eyre = "0.6.8"
git2 = { version = "0.18.0", features = ["vendored-libgit2"] }
regex = "1.9.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
structstruck = "0.4.1"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
